dataset1235/2025-2/1153765216/users/4159660047/executions/2052804200_254684124.log
== RUN (2025-09-02 19:24:26)
-- CODE: 
idade =int (input ("digite sua idade:"))
Print (idade)
if idade >=18:
  Print ("Maior_de_idade")
else:
  Print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:16:00)
-- CODE: 
Idade (inteiro)==int (input) (´´digite sua idade"))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:20:44)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:20:45)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:22:01)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:18:43)
-- CODE: 
Idade =int (input) (´´digite sua idade"))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:20:47)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:22:00)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:17:53)
-- CODE: 
Idade (inteiro)==int (input) (´´digite sua idade"))
Print (idade)
  If idade >=18
  Print ("Maior_de_idade")
  Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:25:12)
-- CODE: 
idade =int (input ("digite sua idade:"))
Print (idade)
if idade >=18:
  Print ("Maior_de_idade")
else:
  Print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Print (idade)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:32:57)
-- CODE: 
idade =int (input ("digite sua idade:"))
print (idade)
if idade >=18:
  print ("Maior_de_idade")
else:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:10:17)
-- CODE: 
idade (inteiro)==int (input) (digite sua idade))
Maior de idade >=18
Menor de Idade <18
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade (inteiro)==int (input) (digite sua idade))
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    idade (inteiro)==int (input) (digite sua idade))
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    idade (inteiro)==int (input) (digite sua idade))
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade (inteiro)==int (input) (digite sua idade))
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade (inteiro)==int (input) (digite sua idade))
                                                   ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade (inteiro)==int (input) (digite sua idade))
                                                   ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:19:28)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:20:44)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:18:40)
-- CODE: 
Idade =int (input) (´´digite sua idade"))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:21:54)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:19:17)
-- CODE: 
Idade =int (input) (´´digite sua idade: "))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:18:42)
-- CODE: 
Idade =int (input) (´´digite sua idade"))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:17:54)
-- CODE: 
Idade (inteiro)==int (input) (´´digite sua idade"))
Print (idade)
  If idade >=18
  Print ("Maior_de_idade")
  Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:20:43)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:23:56)
-- CODE: 
idade =int (input ("digite sua idade:"))
Print (idade)
if idade >=18:
  Print ("Maior_de_idade")
else:
  Print (''Menor_de_idade')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:17:51)
-- CODE: 
Idade (inteiro)==int (input) (´´digite sua idade"))
Print (idade)
  If idade >=18
  Print ("Maior_de_idade")
  Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade (inteiro)==int (input) (´´digite sua idade"))
                                  ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:21:52)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:23:43)
-- CODE: 
idade =int (input ("digite sua idade:"))
Print (idade)
if idade >=18:
  Print ("Maior_de_idade")
else
  Print (''Menor_de_idade')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:18:44)
-- CODE: 
Idade =int (input) (´´digite sua idade"))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade"))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:19:16)
-- CODE: 
Idade =int (input) (´´digite sua idade: "))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade: "))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:23:54)
-- CODE: 
idade =int (input ("digite sua idade:"))
Print (idade)
if idade >=18:
  Print ("Maior_de_idade")
else:
  Print (''Menor_de_idade')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 6
    Print (''Menor_de_idade')
                           ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:20:47)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:32:59)
-- CODE: 
idade =int (input ("digite sua idade:"))
print (idade)
if idade >=18:
  print ("Maior_de_idade")
else:
  print ("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:19:27)
-- CODE: 
Idade =int (input) (´´digite sua idade":))
Print (idade)
If idade >=18
  Print ("Maior_de_idade")
Else Idade <18
  Print (''Menor_de_idade')

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    Idade =int (input) (´´digite sua idade":))
                        ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
